--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.0.6
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +62,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -77,6 +81,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+    - family: RussoOne
+      fonts:
+        - asset: fonts/russo_one.ttf
+    - family: GilroyRegular
+      fonts:
+        - asset: fonts/gilroy_regular.ttf
+
+    - family: GilroyMedium
+      fonts:
+        - asset: fonts/gilroy_medium.ttf
+
   # fonts:
   #   - family: Schyler
   #     fonts:
