--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^8.1.5
   http: ^1.2.1
   shared_preferences: ^2.0.6
+  table_calendar: ^3.1.2
+  intl: ^0.19.0
 
 
 dev_dependencies:
