--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   shared_preferences: ^2.0.6
   table_calendar: ^3.1.2
   intl: ^0.19.0
-
+  rive: ^0.12.3
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
