--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   rive: ^0.12.3
   flutter_svg: ^2.0.9
+  flutter_smart_watch: ^1.0.0
 
 dev_dependencies:
   flutter_test:
