--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   rive: ^0.12.3
   flutter_svg: ^2.0.9
   flutter_smart_watch: ^1.0.0
+  syncfusion_flutter_charts: ^26.1.35
 
 dev_dependencies:
   flutter_test:
