--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_smart_watch: ^1.0.0
   syncfusion_flutter_charts: ^26.1.35
-  image_picker: ^1.1.2
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
