--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_smart_watch: ^1.0.0
   syncfusion_flutter_charts: ^26.1.35
   image_picker: ^0.8.4+4
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
