--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_smart_watch: ^1.0.0
   syncfusion_flutter_charts: ^26.1.35
   image_picker: ^1.1.2
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
